--- a/res/layout/drawer2.xml
+++ b/res/layout/drawer2.xml
@@ -1,31 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="fill_parent">
  
-    <GridLayout
+    <TableLayout
         android:id="@+id/gridView1" 
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:columnWidth="40dp"
-        android:gravity="center"
-        android:numColumns="auto_fit"
         android:orientation="vertical"
-        android:stretchMode="columnWidth" >
+        >
 
-        <!--
-             <ImageView
-            android:id="@+id/appicon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginBottom="2dip"
-            android:layout_marginLeft="2dip"
-            android:layout_marginRight="6dip"
-            android:layout_marginTop="2dip"
-            android:scaleType="fitCenter" />
-        -->
+       
 
-    </GridLayout>
+    </TableLayout>
 </ScrollView>
