Updated AppDrawerFragment with a faster algorithm. It will also sort all installed apps that are launchable from those that are not launchable

--- a/res/menu/cameralayout.xml
+++ b/res/menu/cameralayout.xml
@@ -12,5 +12,7 @@
         android:id="@+id/photo_capture"
         android:showAsAction="ifRoom"
         android:title="Snap!"/>
-
+	<item
+	    android:id="@+id/open_gallery"
+	    android:title="Open Gallery"/>
 </menu>
